parser/tests/cases/snapshots/cases__errors__struct_bad_field_name.snap
---
source: parser/tests/cases/errors.rs
expression: "err_string(stringify!(struct_bad_field_name), types::parse_struct_def, true,\n           \"struct f:\\n pub def\")"

---
error: failed to parse field definition
  ┌─ struct_bad_field_name:2:6
  │
2 │  pub def
  │      ^^^ Unexpected token. Expected a name


